<?xml version="1.0"?>
<package format="2">
  <name>danique</name>
  <version>0.0.0</version>
  <description>The danique package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="danique@todo.todo">danique</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
